force-app/main/default/objects/Business_Case_Exception__c/Business_Case_Exception__c.object-meta.xml
<CustomObject>
    <description>Exception tracking for Business Case snapshot processing errors</description>
    <label>Business Case Exception</label>
    <nameField>
        <displayFormat>BCE-{0000000}</displayFormat>
        <label>Business Case Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Case Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>