force-app/main/default/objects/Business_Case_Exception__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Business Case that caused this exception</description>
    <label>Business Case</label>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>