force-app/main/default/objects/Business_Case_Exception__c/fields/Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Date__c</fullName>
    <description>Date and time when the exception occurred</description>
    <label>Exception Date</label>
    <type>DateTime</type>
</CustomField>