force-app/main/default/objects/Business_Case_Exception__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Type of exception that occurred</description>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing Error</fullName>
            </value>
            <value>
                <fullName>Data Missing</fullName>
            </value>
            <value>
                <fullName>Upsert Error</fullName>
            </value>
            <value>
                <fullName>Validation Error</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>