force-app/main/default/objects/Business_Case_Exception__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Invoice Line Item that caused this exception</description>
    <label>Invoice Line Item</label>
    <referenceTo>Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>